# hermes

./: .gitmodules  CMakeLists.txt  build_uwp.txt
API/hermes/: CMakeLists.txt  hermes.cpp  hermes.h  hermes_dbg.cpp  hermes_dbg.h  hermesw.cpp  ws_session.cpp
android/: settings.gradle
android/hermestest/: CMakeLists.txt  build.gradle
android/hermestest/src/androidTest/java/com/example/hermestest/: ExampleInstrumentedTest.java
android/hermestest/src/main/: AndroidManifest.xml
android/hermestest/src/main/cpp/: native-lib.cpp
android/hermestest/src/main/java/com/example/hermestest/: FirstFragment.java  JSRuntime.java  MainActivity.java  SecondFragment.java
android/hermestest/src/main/res/menu/: menu_main.xml
android/hermestest/src/main/res/navigation/: nav_graph.xml
android/hermestest/src/main/res/values/: strings.xml
android/hermestest/src/test/java/com/example/hermestest/: ExampleUnitTest.java
android/intltest/: build.gradle
android/intltest/javasrc/com/facebook/hermes/intltest/: MainActivity.java
android/intltest/src/main/res/layout/: activity_main.xml
android/intltestapp/: build.gradle
android/intltestapp/cpp/: CMakeLists.txt  ReplProxy.cpp
android/intltestapp/java/com/facebook/hermes/intltestapp/: MainActivity.java
android/intltestapp/src/main/: AndroidManifest.xml
chrome_inspector/: CMakeLists.txt
etw/: build.bat  hermes.wprp  hermes_etw.man
include/hermes/Platform/Unicode/: PlatformUnicode.h
lib/Platform/: CMakeLists.txt  Logging.cpp
lib/Platform/Intl/: PlatformIntlAndroid.cpp
lib/Platform/Intl/java/com/facebook/hermes/intl/: Collator.java  DateTimeFormat.java  Intl.java  NumberFormat.java
lib/Platform/Unicode/: CMakeLists.txt  PlatformUnicodeICU.cpp  PlatformUnicodeUWP.cpp
lib/Support/: CMakeLists.txt  OSCompatWindows.cpp
lib/VM/: Runtime.cpp  StringRefUtils.cpp
lib/VM/JSLib/: DateUtil.cpp
tools/hermes/: CMakeLists.txt  hermes.cpp
